--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+.dash-body{
+  margin-top:50px;
+  margin-left:40px;
+  margin-right:50px;
+  margin-bottom: 50px;
+  /* width:100vw;
+  height: 100vh; */
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  background-color: rgb(229, 253, 248);
+  background-size: cover;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.perform-title{
+  font-size: 20px;
+  font-weight: bold;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+li{
+  list-style-type: none;
+  text-align: left;
+  font-size: large;
+}
+.profile-icon{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* 
+@media only screen and (max-width: 620px) {
+  .profile-icon, .main, .right {
+    width: 100%;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
+} */
